# Curio

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  README.md  agent-tool-architecture.md  eslint.config.mjs  handoff-structuring-agent.md  idea.md  implementation.md  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  prd.md  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tools.md
agent/: Dockerfile  README.md  board_state.py  board_tools.py  board_writer.py  bot.py  pcc-deploy.toml  pyproject.toml  spawner_agent.py  structuring_agent.py  topic_boundary.py  topic_classifier.py  topic_tree.py  tuning.py
agent/tests/: test_board_state.py  test_board_tools.py  test_board_writer.py  test_integration.py  test_spawner_agent.py  test_structuring_agent.py  test_topic_boundary.py  test_topic_tree.py
app/: global-error.tsx  layout.tsx  page.tsx
app/api/board/: _registry.ts  redisBus.ts  route.ts
app/api/board/send/: route.ts
app/api/board/stream/: route.ts
app/api/boards/: route.ts
app/api/boards/[id]/snapshot/: route.ts
app/api/sentry-seed/: route.ts
app/api/voice/connect/: route.ts
app/auth/: auth.css
app/auth/callback/: route.ts
app/boards/: layout.tsx  page.tsx
app/boards/[id]/: page.tsx
app/login/: page.tsx
app/sentry-example-page/: page.tsx
app/signup/: page.tsx
app/whiteboard/: client.tsx  page.tsx
board/components/: TutorPanel.tsx
board/editor/: slash-command.tsx
board/lib/: boardApi.ts
board/shapes/: ImageNode.tsx  MarkdownDoc.tsx  MindMapNode.tsx
components/auth/: AuthForm.tsx
components/boards/: BoardCanvas.tsx  Sidebar.tsx  sidebar.css
components/landing/: BoardScene.tsx  ClosingCTA.tsx  Hero.tsx  Landing.tsx  Reveal.tsx  Story.tsx  landing.css
components/landing/sections/: FeynmanSection.tsx  GapsSection.tsx  LoopSection.tsx  VoiceSection.tsx  feynman.css  gaps.css  loop.css  voice.css
components/whiteboard/: Orb.tsx  VoiceConnect.tsx  WhiteboardApp.tsx  orb.css  whiteboard.css
components/whiteboard/components/: icons.tsx
components/whiteboard/editor/: slash-command.tsx
components/whiteboard/lib/: boardApi.ts  boardSync.ts  commandQueue.ts  layoutGuard.ts  persistence.ts  safeShapeWrites.ts
components/whiteboard/shapes/: ExplanationCard.tsx  FlowNode.tsx  ImageNode.tsx  MarkdownDoc.tsx  MindMapNode.tsx  measureNode.ts
docs/superpowers/plans/: 2026-06-20-voice-board-harness-plan.md
docs/superpowers/specs/: 2026-06-20-voice-board-harness-design.md  2026-06-21-accounts-durable-boards-landing-design.md
lib/supabase/: admin.ts  client.ts  middleware.ts  server.ts  types.ts
scripts/: whiteboard-mock-server.mjs
server/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
server/src/: board-state.ts  command-server.ts  redis.ts  relay.ts  simulate.ts  types.ts
whiteboard/: index.html  mock-server.js  package-lock.json  package.json  vite.config.ts
whiteboard/src/: index.css  main.tsx  vite-env.d.ts
whiteboard/src/components/: WhiteboardApp.tsx
whiteboard/src/editor/: extensions.ts  markdown.ts
whiteboard/src/lib/: boardApi.ts  commandQueue.ts
whiteboard/src/shapes/: ExplanationCard.tsx  FlowNode.tsx
